--- a/build.gradle
+++ b/build.gradle
@@ -22,17 +22,12 @@ configurations {
 	}
 }
 
-
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
 	implementation 'com.h2database:h2'
-	compile 'mysql:mysql-connector-java'
-
-	implementation 'io.jsonwebtoken:jjwt-api:0.10.7'
-
-	runtime 'io.jsonwebtoken:jjwt-impl:0.10.7'
-	runtime 'io.jsonwebtoken:jjwt-jackson:0.10.7'
+	implementation 'mysql:mysql-connector-java'
 
 	compileOnly 'org.projectlombok:lombok'
 
