fix(mac, mac_all, hostname)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,10 +5,10 @@ spring:
     username: ${MYSQL_USER}
     password: ${MYSQL_PASSWORD}
 
-#  jpa:
-#    generate-ddl: true
-#    hibernate:
-#      ddl-auto: create-drop
+  jpa:
+    generate-ddl: true
+    hibernate:
+      ddl-auto: update
 
 #spring:
 #  datasource:
